--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
         <meta name="theme-color" content="#000000" />
-        <title>Cukromix</title>
+        <title>Example business page</title>
         <link
             href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
             rel="stylesheet"
